# qjsonmapper

./: .travis.yml  CMakeLists.txt  COPYING  README.md  qjsonmapper.h  qjsonmapper_fwd.h  qjsonserialize.h  qjsonserialize_basic.h  qjsonserialize_container.h  qjsonserialize_fwd.h  qjsonserialize_minimal.h  qjsonserialize_object.h
test/: CMakeLists.txt  common.h  complexobject.cpp  complexobject_deserialize.cpp  complexobject_serialize.cpp  enum.cpp  enum_deserialize.cpp  enum_serialize.cpp  int.cpp  int_deserialize.cpp  int_serialize.cpp  minimal_definition_compiles.cpp  qenum.cpp  qenum_deserialize.cpp  qenum_serialize.cpp  qhash.cpp  qhash_deserialize.cpp  qhash_serialize.cpp  qmap.cpp  qmap_deserialize.cpp  qmap_numerickey_deserialize.cpp  qmap_numerickey_serialize.cpp  qmap_serialize.cpp  qobject.cpp  qobject_deserialize.cpp  qobject_serialize.cpp  qpair.cpp  qpair_deserialize.cpp  qpair_serialize.cpp  qstring.cpp  qstring_deserialize.cpp  qstring_serialize.cpp  qstringlist.cpp  qstringlist_deserialize.cpp  qstringlist_serialize.cpp  qvector.cpp  qvector_deserialize.cpp  qvector_serialize.cpp  serializable.cpp  serializable_deserialize.cpp  (+16 more)
